--- a/latex/custom.bib
+++ b/latex/custom.bib
@@ -298,3 +298,25 @@
   journal={arXiv preprint arXiv:2407.13734},
   year={2024}
 }
+
+@inproceedings{DBLP:conf/iclr/LightmanKBEBLLS24,
+  author       = {Hunter Lightman and
+                  Vineet Kosaraju and
+                  Yuri Burda and
+                  Harrison Edwards and
+                  Bowen Baker and
+                  Teddy Lee and
+                  Jan Leike and
+                  John Schulman and
+                  Ilya Sutskever and
+                  Karl Cobbe},
+  title        = {Let's Verify Step by Step},
+  booktitle    = {The Twelfth International Conference on Learning Representations,
+                  {ICLR} 2024, Vienna, Austria, May 7-11, 2024},
+  publisher    = {OpenReview.net},
+  year         = {2024},
+  url          = {https://openreview.net/forum?id=v8L0pN6EOi},
+  timestamp    = {Wed, 07 Aug 2024 17:11:53 +0200},
+  biburl       = {https://dblp.org/rec/conf/iclr/LightmanKBEBLLS24.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
